--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #0d1117;
+  background-color: #7fa6b2;
   color: #c9d1d9;
 }
 
 header {
-  background-color: #161b22;
+  background-color: #E5E1DA;
   text-align: center;
   padding: 25px 0;
 }
 
+header p {
+  color : #A27D74;
+}
 nav a {
-  color: #58a6ff;
+  color: #2F3A3D;
   margin: 0 12px;
   text-decoration: none;
   font-weight: bold;
@@ -25,24 +28,33 @@ main {
   line-height: 1.8;
 }
 
-h1, h2 { color: #58a6ff; }
+h1, h2 { color: #4A3F35; }
 
 .btn {
   display: inline-block;
   padding: 10px 20px;
-  border: 2px solid #58a6ff;
+  border: 2px solid #4D7366;
   border-radius: 6px;
-  color: #58a6ff;
+  color: #0d1117;
   text-decoration: none;
 }
 .btn:hover {
-  background-color: #58a6ff;
+  background-color: #F1F0E8;
   color: #0d1117;
 }
 
 pre {
-  background-color: #161b22;
+  background-color: #B3C8CF;
   padding: 15px;
   border-radius: 8px;
   overflow-x: auto;
 }
+code {
+    font-family: 'Courier New', monospace;
+    color: #0d1117;
+  }
+  
+p {
+  color : #3F5F6D;
+}
+
